Fix misalignment of header at > 600px.

--- a/assets/scss/globals/_header.scss
+++ b/assets/scss/globals/_header.scss
@@ -37,4 +37,8 @@
 
 .header__subtitle {
   margin-top: 0.5 * $vr;
+
+  @media (screen and min-width: 600px) {
+    margin-top: 0;
+  }
 }
